<resources>
    <string name="app_name">Loop</string>
    <!--<string name="loading">Loading...</string>-->
    <!--<string name="file_not_found">File not found</string>-->
    <!--<string name="likes">Likes</string>-->
    <!--<string name="no_liked_tracks">No Liked Tracks</string>-->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="snowboarding">Snowboarding</string>
    <string name="skateboarding">Skateboarding</string>
    <string name="surfing">Surfing</string>
    <string name="wind_surfing">Wind Surfing</string>
    <string name="bodyboarding">Bodyboarding</string>
    <string name="skiing">Skiing</string>
    <string name="bmx">BMX</string>
    <string name="motocross">Motocross</string>

    <string name="email_subject">Loop Support</string>
    <string name="email_message">Please describe the issue you are having here.</string>
    <string name="support_email">lawloretienne@gmail.com</string>
    <string name="platform">Phone</string>

    <!--<string name="client_redirect_uri">urn:ietf:wg:oauth:2.0:oob</string>-->
    <string name="client_redirect_uri">http://localhost</string>
    <string name="vimeo_state">f9bsne76z8vs17cs</string>


    <string name="token_type">token_type</string>

    <string name="watch_later_empty_prompt">Watch Later is a handy way to bookmark videos you don\'t have time to watch right now.
        When you click the Watch Later icon on any video screen, it will be added here.</string>

    <string name="likes_empty_prompt">Likes are a quick and friendly way to let a video creator know that you appreciate, value, or maybe even love their video.
        When you click the Like icon on any video screen, it will be added here.</string>
    <string name="share">Share</string>
    <string name="watch_later">Watch Later</string>
    <string name="like">Like</string>
    <string name="share_this_video">Share this video with</string>
    <string name="search_hint">Search Loop</string>

    <string name="content_desc">Content Description</string>
    <string name="watch_now">Watch Now</string>
    <string name="likes">Likes</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="loop">Loop</string>
    <string name="login_with_vimeo">Login with Vimeo</string>
    <string name="no_categories">No categories</string>
    <string name="comedy">Comedy</string>
    <string name="reload">RELOAD</string>
    <string name="sign_up_or_log_in">Sign Up or Log In</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_order">Sort order</string>
    <string name="no_videos">No videos</string>
    <string name="comments">Comments</string>

    <string name="voice_prompt">What video are you looking for?</string>
    <string name="leave_a_comment">Leave a comment here</string>

    <string name="check_your_network_connection">Can\'t load data. Check your network connection.</string>
    <string name="no_available_categories">No available categories.</string>


</resources>
