<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_watch_now"
            android:icon="@drawable/ic_watch_now"
            android:title="@string/watch_now"
            android:checked="true"/>
        <item
            android:id="@+id/nav_likes"
            android:icon="@drawable/ic_likes"
            android:title="@string/likes" />
        <item
            android:id="@+id/nav_watch_later"
            android:icon="@drawable/ic_watch_later"
            android:title="@string/watch_later" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore" />
    </group>

    <group android:id="@+id/group_2">
        <!--<item-->
            <!--android:icon="@drawable/ic_settings"-->
            <!--android:title="@string/settings" />-->
        <item
            android:icon="@drawable/ic_help"
            android:title="@string/help_and_feedback" />
        <item
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

        <item
            android:enabled="false"
            android:title="" />
    </group>

</menu>