<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/error_ll"
    android:layout_width="288dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc"
        android:src="@drawable/ic_error_view_cloud" />

    <com.etiennelawlor.loop.ui.CustomFontTextView
        android:id="@+id/error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/inverse_secondary_text"
        android:textSize="20sp"
        app:textFont="ubuntu_medium"
        android:text="@string/check_your_network_connection" />

    <com.etiennelawlor.loop.ui.CustomFontButton
        android:id="@+id/reload_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:textFont="ubuntu_medium" />

    <!--app:backgroundTint="@color/accent"-->

</LinearLayout>